--- a/login.html
+++ b/login.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My App</title>
+    <title>LogIn</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>This is my app!</h1>
-    Login Form
+    <h1>Log In</h1>
 </body>
 </html>
